parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    RESERVED

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID PUNTOC
Rule 7     var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> VOID
Rule 10    fun_declaration -> type_specifier ID IPAREN params DPAREN compound_stmt
Rule 11    params -> param_list
Rule 12    params -> VOID
Rule 13    param_list -> param_list COMA param
Rule 14    param_list -> param
Rule 15    param -> type_specifier ID
Rule 16    param -> type_specifier ID ICORCH DCORCH
Rule 17    compound_stmt -> ILLAVE local_declarations statement_list DLLAVE
Rule 18    local_declarations -> local_declarations var_declaration
Rule 19    local_declarations -> empty
Rule 20    statement_list -> statement_list statement
Rule 21    statement_list -> empty
Rule 22    statement -> expression_stmt
Rule 23    statement -> compound_stmt
Rule 24    statement -> selection_stmt
Rule 25    statement -> iteration_stmt
Rule 26    statement -> return_stmt
Rule 27    expression_stmt -> expression PUNTOC
Rule 28    expression_stmt -> PUNTOC
Rule 29    selection_stmt -> IF IPAREN expression DPAREN statement
Rule 30    selection_stmt -> IF IPAREN expression DPAREN statement ELSE statement
Rule 31    iteration_stmt -> WHILE IPAREN expression DPAREN statement
Rule 32    return_stmt -> RETURN PUNTOC
Rule 33    return_stmt -> RETURN expression PUNTOC
Rule 34    expression -> var ASIGN expression
Rule 35    expression -> simple_expression
Rule 36    var -> ID
Rule 37    var -> ID ICORCH expression DCORCH
Rule 38    simple_expression -> additive_expression relop additive_expression
Rule 39    simple_expression -> additive_expression
Rule 40    relop -> MENORI
Rule 41    relop -> MENOR
Rule 42    relop -> MAYOR
Rule 43    relop -> MAYORI
Rule 44    relop -> IGUAL
Rule 45    relop -> DIST
Rule 46    additive_expression -> additive_expression addop term
Rule 47    additive_expression -> term
Rule 48    addop -> SUMA
Rule 49    addop -> RESTA
Rule 50    term -> term mulop factor
Rule 51    term -> factor
Rule 52    mulop -> MULTI
Rule 53    mulop -> DIVI
Rule 54    factor -> IPAREN expression DPAREN
Rule 55    factor -> var
Rule 56    factor -> call
Rule 57    factor -> NUM
Rule 58    call -> ID IPAREN args DPAREN
Rule 59    args -> arg_list
Rule 60    args -> empty
Rule 61    arg_list -> arg_list COMA expression
Rule 62    arg_list -> expression
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ASIGN                : 34
COMA                 : 13 61
DCORCH               : 7 16 37
DIST                 : 45
DIVI                 : 53
DLLAVE               : 17
DPAREN               : 10 29 30 31 54 58
ELSE                 : 30
ICORCH               : 7 16 37
ID                   : 6 7 10 15 16 36 37 58
IF                   : 29 30
IGUAL                : 44
ILLAVE               : 17
INT                  : 8
IPAREN               : 10 29 30 31 54 58
MAYOR                : 42
MAYORI               : 43
MENOR                : 41
MENORI               : 40
MULTI                : 52
NUM                  : 7 57
PUNTOC               : 6 7 27 28 32 33
RESERVED             : 
RESTA                : 49
RETURN               : 32 33
SUMA                 : 48
VOID                 : 9 12
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

additive_expression  : 38 38 39 46
addop                : 46
arg_list             : 59 61
args                 : 58
call                 : 56
compound_stmt        : 10 23
declaration          : 2 3
declaration_list     : 1 2
empty                : 19 21 60
expression           : 27 29 30 31 33 34 37 54 61 62
expression_stmt      : 22
factor               : 50 51
fun_declaration      : 5
iteration_stmt       : 25
local_declarations   : 17 18
mulop                : 50
param                : 13 14
param_list           : 11 13
params               : 10
program              : 0
relop                : 38
return_stmt          : 26
selection_stmt       : 24
simple_expression    : 35
statement            : 20 29 30 30 31
statement_list       : 17 20
term                 : 46 47 50
type_specifier       : 6 7 10 15 16
var                  : 34 55
var_declaration      : 4 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID PUNTOC
    (7) var_declaration -> . type_specifier ID ICORCH NUM DCORCH PUNTOC
    (10) fun_declaration -> . type_specifier ID IPAREN params DPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    INT             shift and go to state 3
    VOID            shift and go to state 4

    type_specifier                 shift and go to state 1
    fun_declaration                shift and go to state 2
    declaration_list               shift and go to state 5
    var_declaration                shift and go to state 6
    program                        shift and go to state 7
    declaration                    shift and go to state 8

state 1

    (6) var_declaration -> type_specifier . ID PUNTOC
    (7) var_declaration -> type_specifier . ID ICORCH NUM DCORCH PUNTOC
    (10) fun_declaration -> type_specifier . ID IPAREN params DPAREN compound_stmt

    ID              shift and go to state 9


state 2

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 3

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)


state 4

    (9) type_specifier -> VOID .

    ID              reduce using rule 9 (type_specifier -> VOID .)


state 5

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID PUNTOC
    (7) var_declaration -> . type_specifier ID ICORCH NUM DCORCH PUNTOC
    (10) fun_declaration -> . type_specifier ID IPAREN params DPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 3
    VOID            shift and go to state 4

    type_specifier                 shift and go to state 1
    fun_declaration                shift and go to state 2
    var_declaration                shift and go to state 6
    declaration                    shift and go to state 10

state 6

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 7

    (0) S' -> program .



state 8

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 9

    (6) var_declaration -> type_specifier ID . PUNTOC
    (7) var_declaration -> type_specifier ID . ICORCH NUM DCORCH PUNTOC
    (10) fun_declaration -> type_specifier ID . IPAREN params DPAREN compound_stmt

    PUNTOC          shift and go to state 13
    ICORCH          shift and go to state 11
    IPAREN          shift and go to state 12


state 10

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 11

    (7) var_declaration -> type_specifier ID ICORCH . NUM DCORCH PUNTOC

    NUM             shift and go to state 14


state 12

    (10) fun_declaration -> type_specifier ID IPAREN . params DPAREN compound_stmt
    (11) params -> . param_list
    (12) params -> . VOID
    (13) param_list -> . param_list COMA param
    (14) param_list -> . param
    (15) param -> . type_specifier ID
    (16) param -> . type_specifier ID ICORCH DCORCH
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    VOID            shift and go to state 17
    INT             shift and go to state 3

    param_list                     shift and go to state 16
    type_specifier                 shift and go to state 15
    params                         shift and go to state 18
    param                          shift and go to state 19

state 13

    (6) var_declaration -> type_specifier ID PUNTOC .

    INT             reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    DLLAVE          reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    PUNTOC          reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    ILLAVE          reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    IPAREN          reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)
    NUM             reduce using rule 6 (var_declaration -> type_specifier ID PUNTOC .)


state 14

    (7) var_declaration -> type_specifier ID ICORCH NUM . DCORCH PUNTOC

    DCORCH          shift and go to state 20


state 15

    (15) param -> type_specifier . ID
    (16) param -> type_specifier . ID ICORCH DCORCH

    ID              shift and go to state 21


state 16

    (11) params -> param_list .
    (13) param_list -> param_list . COMA param

    DPAREN          reduce using rule 11 (params -> param_list .)
    COMA            shift and go to state 22


state 17

    (12) params -> VOID .
    (9) type_specifier -> VOID .

    DPAREN          reduce using rule 12 (params -> VOID .)
    ID              reduce using rule 9 (type_specifier -> VOID .)


state 18

    (10) fun_declaration -> type_specifier ID IPAREN params . DPAREN compound_stmt

    DPAREN          shift and go to state 23


state 19

    (14) param_list -> param .

    COMA            reduce using rule 14 (param_list -> param .)
    DPAREN          reduce using rule 14 (param_list -> param .)


state 20

    (7) var_declaration -> type_specifier ID ICORCH NUM DCORCH . PUNTOC

    PUNTOC          shift and go to state 24


state 21

    (15) param -> type_specifier ID .
    (16) param -> type_specifier ID . ICORCH DCORCH

    COMA            reduce using rule 15 (param -> type_specifier ID .)
    DPAREN          reduce using rule 15 (param -> type_specifier ID .)
    ICORCH          shift and go to state 25


state 22

    (13) param_list -> param_list COMA . param
    (15) param -> . type_specifier ID
    (16) param -> . type_specifier ID ICORCH DCORCH
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    INT             shift and go to state 3
    VOID            shift and go to state 4

    type_specifier                 shift and go to state 15
    param                          shift and go to state 26

state 23

    (10) fun_declaration -> type_specifier ID IPAREN params DPAREN . compound_stmt
    (17) compound_stmt -> . ILLAVE local_declarations statement_list DLLAVE

    ILLAVE          shift and go to state 27

    compound_stmt                  shift and go to state 28

state 24

    (7) var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .

    INT             reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    $end            reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    DLLAVE          reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    PUNTOC          reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    ILLAVE          reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    IF              reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    ID              reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    IPAREN          reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)
    NUM             reduce using rule 7 (var_declaration -> type_specifier ID ICORCH NUM DCORCH PUNTOC .)


state 25

    (16) param -> type_specifier ID ICORCH . DCORCH

    DCORCH          shift and go to state 29


state 26

    (13) param_list -> param_list COMA param .

    COMA            reduce using rule 13 (param_list -> param_list COMA param .)
    DPAREN          reduce using rule 13 (param_list -> param_list COMA param .)


state 27

    (17) compound_stmt -> ILLAVE . local_declarations statement_list DLLAVE
    (18) local_declarations -> . local_declarations var_declaration
    (19) local_declarations -> . empty
    (63) empty -> .

    INT             reduce using rule 63 (empty -> .)
    VOID            reduce using rule 63 (empty -> .)
    DLLAVE          reduce using rule 63 (empty -> .)
    PUNTOC          reduce using rule 63 (empty -> .)
    ILLAVE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    IPAREN          reduce using rule 63 (empty -> .)
    NUM             reduce using rule 63 (empty -> .)

    local_declarations             shift and go to state 30
    empty                          shift and go to state 31

state 28

    (10) fun_declaration -> type_specifier ID IPAREN params DPAREN compound_stmt .

    INT             reduce using rule 10 (fun_declaration -> type_specifier ID IPAREN params DPAREN compound_stmt .)
    VOID            reduce using rule 10 (fun_declaration -> type_specifier ID IPAREN params DPAREN compound_stmt .)
    $end            reduce using rule 10 (fun_declaration -> type_specifier ID IPAREN params DPAREN compound_stmt .)


state 29

    (16) param -> type_specifier ID ICORCH DCORCH .

    COMA            reduce using rule 16 (param -> type_specifier ID ICORCH DCORCH .)
    DPAREN          reduce using rule 16 (param -> type_specifier ID ICORCH DCORCH .)


state 30

    (17) compound_stmt -> ILLAVE local_declarations . statement_list DLLAVE
    (18) local_declarations -> local_declarations . var_declaration
    (20) statement_list -> . statement_list statement
    (21) statement_list -> . empty
    (6) var_declaration -> . type_specifier ID PUNTOC
    (7) var_declaration -> . type_specifier ID ICORCH NUM DCORCH PUNTOC
    (63) empty -> .
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    DLLAVE          reduce using rule 63 (empty -> .)
    PUNTOC          reduce using rule 63 (empty -> .)
    ILLAVE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    IPAREN          reduce using rule 63 (empty -> .)
    NUM             reduce using rule 63 (empty -> .)
    INT             shift and go to state 3
    VOID            shift and go to state 4

    type_specifier                 shift and go to state 32
    var_declaration                shift and go to state 33
    statement_list                 shift and go to state 34
    empty                          shift and go to state 35

state 31

    (19) local_declarations -> empty .

    INT             reduce using rule 19 (local_declarations -> empty .)
    VOID            reduce using rule 19 (local_declarations -> empty .)
    DLLAVE          reduce using rule 19 (local_declarations -> empty .)
    PUNTOC          reduce using rule 19 (local_declarations -> empty .)
    ILLAVE          reduce using rule 19 (local_declarations -> empty .)
    IF              reduce using rule 19 (local_declarations -> empty .)
    WHILE           reduce using rule 19 (local_declarations -> empty .)
    RETURN          reduce using rule 19 (local_declarations -> empty .)
    ID              reduce using rule 19 (local_declarations -> empty .)
    IPAREN          reduce using rule 19 (local_declarations -> empty .)
    NUM             reduce using rule 19 (local_declarations -> empty .)


state 32

    (6) var_declaration -> type_specifier . ID PUNTOC
    (7) var_declaration -> type_specifier . ID ICORCH NUM DCORCH PUNTOC

    ID              shift and go to state 36


state 33

    (18) local_declarations -> local_declarations var_declaration .

    INT             reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    VOID            reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    DLLAVE          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    PUNTOC          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    ILLAVE          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    IF              reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    WHILE           reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    RETURN          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    ID              reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    IPAREN          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    NUM             reduce using rule 18 (local_declarations -> local_declarations var_declaration .)


state 34

    (17) compound_stmt -> ILLAVE local_declarations statement_list . DLLAVE
    (20) statement_list -> statement_list . statement
    (22) statement -> . expression_stmt
    (23) statement -> . compound_stmt
    (24) statement -> . selection_stmt
    (25) statement -> . iteration_stmt
    (26) statement -> . return_stmt
    (27) expression_stmt -> . expression PUNTOC
    (28) expression_stmt -> . PUNTOC
    (17) compound_stmt -> . ILLAVE local_declarations statement_list DLLAVE
    (29) selection_stmt -> . IF IPAREN expression DPAREN statement
    (30) selection_stmt -> . IF IPAREN expression DPAREN statement ELSE statement
    (31) iteration_stmt -> . WHILE IPAREN expression DPAREN statement
    (32) return_stmt -> . RETURN PUNTOC
    (33) return_stmt -> . RETURN expression PUNTOC
    (34) expression -> . var ASIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) var -> . ID ICORCH expression DCORCH
    (38) simple_expression -> . additive_expression relop additive_expression
    (39) simple_expression -> . additive_expression
    (46) additive_expression -> . additive_expression addop term
    (47) additive_expression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . IPAREN expression DPAREN
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUM
    (58) call -> . ID IPAREN args DPAREN

    DLLAVE          shift and go to state 55
    PUNTOC          shift and go to state 50
    ILLAVE          shift and go to state 27
    IF              shift and go to state 53
    WHILE           shift and go to state 38
    RETURN          shift and go to state 37
    ID              shift and go to state 52
    IPAREN          shift and go to state 43
    NUM             shift and go to state 44

    term                           shift and go to state 54
    return_stmt                    shift and go to state 39
    call                           shift and go to state 42
    factor                         shift and go to state 47
    iteration_stmt                 shift and go to state 56
    var                            shift and go to state 48
    expression_stmt                shift and go to state 45
    statement                      shift and go to state 46
    selection_stmt                 shift and go to state 49
    simple_expression              shift and go to state 40
    expression                     shift and go to state 57
    compound_stmt                  shift and go to state 51
    additive_expression            shift and go to state 41

state 35

    (21) statement_list -> empty .

    DLLAVE          reduce using rule 21 (statement_list -> empty .)
    PUNTOC          reduce using rule 21 (statement_list -> empty .)
    ILLAVE          reduce using rule 21 (statement_list -> empty .)
    IF              reduce using rule 21 (statement_list -> empty .)
    WHILE           reduce using rule 21 (statement_list -> empty .)
    RETURN          reduce using rule 21 (statement_list -> empty .)
    ID              reduce using rule 21 (statement_list -> empty .)
    IPAREN          reduce using rule 21 (statement_list -> empty .)
    NUM             reduce using rule 21 (statement_list -> empty .)


state 36

    (6) var_declaration -> type_specifier ID . PUNTOC
    (7) var_declaration -> type_specifier ID . ICORCH NUM DCORCH PUNTOC

    PUNTOC          shift and go to state 13
    ICORCH          shift and go to state 11


state 37

    (32) return_stmt -> RETURN . PUNTOC
    (33) return_stmt -> RETURN . expression PUNTOC
    (34) expression -> . var ASIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) var -> . ID ICORCH expression DCORCH
    (38) simple_expression -> . additive_expression relop additive_expression
    (39) simple_expression -> . additive_expression
    (46) additive_expression -> . additive_expression addop term
    (47) additive_expression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . IPAREN expression DPAREN
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUM
    (58) call -> . ID IPAREN args DPAREN

    PUNTOC          shift and go to state 58
    ID              shift and go to state 52
    IPAREN          shift and go to state 43
    NUM             shift and go to state 44

    term                           shift and go to state 54
    call                           shift and go to state 42
    factor                         shift and go to state 47
    var                            shift and go to state 48
    simple_expression              shift and go to state 40
    expression                     shift and go to state 59
    additive_expression            shift and go to state 41

state 38

    (31) iteration_stmt -> WHILE . IPAREN expression DPAREN statement

    IPAREN          shift and go to state 60


state 39

    (26) statement -> return_stmt .

    DLLAVE          reduce using rule 26 (statement -> return_stmt .)
    PUNTOC          reduce using rule 26 (statement -> return_stmt .)
    ILLAVE          reduce using rule 26 (statement -> return_stmt .)
    IF              reduce using rule 26 (statement -> return_stmt .)
    WHILE           reduce using rule 26 (statement -> return_stmt .)
    RETURN          reduce using rule 26 (statement -> return_stmt .)
    ID              reduce using rule 26 (statement -> return_stmt .)
    IPAREN          reduce using rule 26 (statement -> return_stmt .)
    NUM             reduce using rule 26 (statement -> return_stmt .)
    ELSE            reduce using rule 26 (statement -> return_stmt .)


state 40

    (35) expression -> simple_expression .

    DPAREN          reduce using rule 35 (expression -> simple_expression .)
    PUNTOC          reduce using rule 35 (expression -> simple_expression .)
    DCORCH          reduce using rule 35 (expression -> simple_expression .)
    COMA            reduce using rule 35 (expression -> simple_expression .)


state 41

    (38) simple_expression -> additive_expression . relop additive_expression
    (39) simple_expression -> additive_expression .
    (46) additive_expression -> additive_expression . addop term
    (40) relop -> . MENORI
    (41) relop -> . MENOR
    (42) relop -> . MAYOR
    (43) relop -> . MAYORI
    (44) relop -> . IGUAL
    (45) relop -> . DIST
    (48) addop -> . SUMA
    (49) addop -> . RESTA

    PUNTOC          reduce using rule 39 (simple_expression -> additive_expression .)
    DCORCH          reduce using rule 39 (simple_expression -> additive_expression .)
    DPAREN          reduce using rule 39 (simple_expression -> additive_expression .)
    COMA            reduce using rule 39 (simple_expression -> additive_expression .)
    MENORI          shift and go to state 65
    MENOR           shift and go to state 67
    MAYOR           shift and go to state 70
    MAYORI          shift and go to state 64
    IGUAL           shift and go to state 66
    DIST            shift and go to state 62
    SUMA            shift and go to state 68
    RESTA           shift and go to state 69

    addop                          shift and go to state 61
    relop                          shift and go to state 63

state 42

    (56) factor -> call .

    MULTI           reduce using rule 56 (factor -> call .)
    DIVI            reduce using rule 56 (factor -> call .)
    MENORI          reduce using rule 56 (factor -> call .)
    MENOR           reduce using rule 56 (factor -> call .)
    MAYOR           reduce using rule 56 (factor -> call .)
    MAYORI          reduce using rule 56 (factor -> call .)
    IGUAL           reduce using rule 56 (factor -> call .)
    DIST            reduce using rule 56 (factor -> call .)
    SUMA            reduce using rule 56 (factor -> call .)
    RESTA           reduce using rule 56 (factor -> call .)
    COMA            reduce using rule 56 (factor -> call .)
    DPAREN          reduce using rule 56 (factor -> call .)
    PUNTOC          reduce using rule 56 (factor -> call .)
    DCORCH          reduce using rule 56 (factor -> call .)


state 43

    (54) factor -> IPAREN . expression DPAREN
    (34) expression -> . var ASIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) var -> . ID ICORCH expression DCORCH
    (38) simple_expression -> . additive_expression relop additive_expression
    (39) simple_expression -> . additive_expression
    (46) additive_expression -> . additive_expression addop term
    (47) additive_expression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . IPAREN expression DPAREN
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUM
    (58) call -> . ID IPAREN args DPAREN

    ID              shift and go to state 52
    IPAREN          shift and go to state 43
    NUM             shift and go to state 44

    term                           shift and go to state 54
    call                           shift and go to state 42
    factor                         shift and go to state 47
    var                            shift and go to state 48
    simple_expression              shift and go to state 40
    expression                     shift and go to state 71
    additive_expression            shift and go to state 41

state 44

    (57) factor -> NUM .
